src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    line-height: 1.5;
    font-weight: 400;
    color-scheme: light dark;
    color: #EFEEE7;
    background-color: #232024;
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
    word-wrap: break-word;
    font-size: clamp(14px, 1.5vw, 18px);
}

*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

button {
    border-radius: 8px;
    border: 1px solid transparent;
    padding: 0.6em 1.2em;
    font-size: 1em;
    font-weight: 500;
    font-family: inherit;
    background-color: #1a1a1a;
    cursor: pointer;
    transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: auto;
  background-color: #1a1a1a;
}

th{
  font-weight: normal;
}

@tailwind base;
h1 {
  @apply text-5xl;
}
h2 {
  @apply text-4xl;
}
h3 {
  @apply text-3xl;
}
h4 {
  @apply text-2xl;
}
h5 {
  @apply text-xl;
}
h6 {
  @apply text-lg;
}
h1, h2, h3, h4, h5, h6{
  @apply my-4;
}

p{
  @apply my-2;
}
ul {
    @apply 	list-decimal;
  }


tr, td, th{
  @apply border-gray-500;
  @apply border-4;
}

